# hpp-rviz

./: CMakeLists.txt  LICENSE  README.md  flake.nix  package.xml  pyproject.toml  rviz_common_plugins.xml
.github/workflows/: nix.yml  update-flake-lock.yml
doc/: Doxyfile.extra.in  rviz_viewer.hh
src/: CMakeLists.txt
src/hpp_rviz/include/hpp/display/: trajectory.hpp  waypoint.hpp
src/hpp_rviz/include/hpp/panel/: trajectory_slider.hpp
src/hpp_rviz/include/hpp/tool/: waypoint.hpp
src/hpp_rviz/src/display/: trajectory.cpp  waypoint.cpp
src/hpp_rviz/src/panel/: communication.cpp  trajectory_slider.cpp
src/hpp_rviz/src/tool/: waypoint.cpp
src/hpp_rviz_pkg/hpp_msgs/: CMakeLists.txt  package.xml
src/hpp_rviz_pkg/hpp_msgs/msg/: HppVectorConfiguration.msg  PathInfo.msg  PinnochioJointArray.msg
src/hpp_rviz_pkg/hpp_ros_visualization/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
src/hpp_rviz_pkg/hpp_ros_visualization/include/hpp/: Position3d.hpp  interactiveWaypoint.hpp
src/hpp_rviz_pkg/hpp_ros_visualization/include/hpp/display/: WaypointProperty.hpp  trajectory.hpp  waypoint.hpp
src/hpp_rviz_pkg/hpp_ros_visualization/include/hpp/panel/: trajectory_slider.hpp
src/hpp_rviz_pkg/hpp_ros_visualization/include/hpp/tool/: interactiveWaypoint.hpp  waypoint.hpp
src/hpp_rviz_pkg/hpp_ros_visualization/src/display/: trajectory.cpp  waypoint.cpp
src/hpp_rviz_pkg/hpp_ros_visualization/src/panel/: communication.cpp  trajectory_slider.cpp  ui.cpp
src/hpp_rviz_pkg/hpp_ros_visualization/src/tool/: waypoint.cpp
src/hpp_rviz_pkg/hpp_ros_vizualisation/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
src/hpp_rviz_pkg/hpp_ros_vizualisation/include/hpp/: doubleSlider.hpp
src/hpp_rviz_pkg/hpp_ros_vizualisation/include/hpp/panel/: trajectory_slider.hpp
src/hpp_rviz_pkg/hpp_ros_vizualisation/include/hpp/plugin/: trajectory.hpp
src/hpp_rviz_pkg/hpp_ros_vizualisation/src/panel/: communication.cpp  trajectory_slider.cpp  ui.cpp
src/hpp_rviz_pkg/hpp_ros_vizualisation/src/plugin/: trajectory.cpp
src/include/hpp/: doubleSlider.hpp
src/include/hpp/display/: landMark.hpp  landMarkProperty.hpp  landmark.hpp  landmarkProperty.hpp  trajectory.hpp  waypoint.hpp
src/include/hpp/panel/: trajectory_slider.hpp
src/include/hpp/tool/: interactiveLandMark.hpp  interactiveLandmark.hpp  landMark.hpp  landmark.hpp  waypoint.hpp
src/msg/: HppLandMark.msg  HppVectorConfiguration.msg  HppWaypoint.msg  PinocchioJoint.msg
src/pyhpp/viser/: viewer.py
src/pyhpp_rviz/: __init__.py  viewer.py
src/pyhpp_rviz/publisher/: FreeFlyerPublisher.py  JointState.py  Navigation.py  RobotDescriptionPublisher.py  RobotState.py  StaticTfPublisher.py  TransformStampedPublisher.py  __init__.py
src/pyhpp_viser/: __init__.py  viewer.py
src/src/display/: landMark.cpp  landmark.cpp  trajectory.cpp  waypoint.cpp
src/src/panel/: communication.cpp  trajectory_slider.cpp  ui.cpp
src/src/tool/: landMark.cpp  landmark.cpp  waypoint.cpp
test/: boxGrapedByTransition.py  viewer.py
