<package format="3">
  <name>hpp_gepetto_viewer</name>
  <version>8.0.0</version>
  <description>Display of hpp robots and obstacles in gepetto-viewer </description>

  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>

  <author>Joseph Mirabel</author>
  <author>Florent Lamiraux et al.</author>
  <license>BSD-2</license>

  <url type="website">https://github.com/humanoid-path-planner/hpp-gepetto-viewer</url>
  <url type="repository">https://github.com/humanoid-path-planner/hpp-gepetto-viewer</url>
  <url type="bugtracker">https://github.com/humanoid-path-planner/hpp-gepetto-viewer/issues</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>doxygen</build_depend>

  <!-- === ROS 2 dependencies (nouveau) === -->
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rosidl_default_runtime</depend>
  <depend condition="$ROS_VERSION == 2">std_msgs</depend>
  <depend condition="$ROS_VERSION == 2">sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 2">visualization_msgs</depend>
  <depend condition="$ROS_VERSION == 2">rviz_common</depend>
  <depend condition="$ROS_VERSION == 2">rviz_default_plugins</depend>
  <depend condition="$ROS_VERSION == 2">rviz_rendering</depend>
  <depend condition="$ROS_VERSION == 2">pluginlib</depend>
  <depend condition="$ROS_VERSION == 2">ament_cmake_ros</depend>

  <exec_depend>hpp-corbaserver</exec_depend>
  <exec_depend>gepetto-viewer</exec_depend>

  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>